--- a/css/styles.css
+++ b/css/styles.css
@@ -6,12 +6,18 @@ body {
   line-height: 1.5rem;
 }
 
+@media screen and (max-width: 600px) {
+  body {
+    font-size: 0.9rem;
+  }
+}
+
 header {
   padding: 2rem 0 0 2rem;
 }
 
 main {
-  padding: 0 0 1rem 2rem;
+  padding: 0 1rem 1rem 1rem;
 }
 
 ::-moz-selection {
