--- a/fcc.handlebars
+++ b/fcc.handlebars
@@ -9,7 +9,7 @@
             {{#each projects}}
             <li>
                 <a href="{{homepage}}">FCC{{project_id}} - {{project_title}}</a>
-                &bull;<a href="{{source}}">Source</a>
+                &bull;<a href="{{source}}" class="source-link">Source</a>
             </li>
             {{/each}}
         </ul>
