--- a/styles.scss
+++ b/styles.scss
@@ -37,13 +37,14 @@ main {
 
 a {
   text-decoration: none;
-  border-bottom: 1px solid #808080;
+  border-bottom: 1px solid #bdb9b9;
   line-height: 1.3rem;
   color: rgb(63, 61, 65);
   padding: 1px 4px;
 
   &:hover {
     background-color: #cec4c4;
+    border-color: #808080;
   }
 
   &:not([href*='vimturtle.github.io']):not([href^='/']):not([href^='#']):not([href*='github.com'])::after {
@@ -60,6 +61,10 @@ a {
   &[href*='github.com']::after {
     content: url(/img/github.svg);
   }
+}
+
+.source-link {
+  opacity: 0.8;
 }
 
 h3 > a {
